# SegAL

./: .flake8  .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: installation.md  usage.md
examples/: run_al_cycle.py
examples/utils/: dataset_prepare.py  utils.py
segal/: utils.py
segal/datasets/: __init__.py  base_dataset.py  camvid.py  cityscapes.py  pascal_voc.py
segal/strategies/: __init__.py  ceal_sampling.py  entropy_sampling.py  least_confidence.py  margin_sampling.py  random_sampling.py  strategy.py  vote_sampling.py
tests/: conftest.py  test_camvid.py  test_ceal_sampling.py  test_cityscapes.py  test_entropy_sampling.py  test_least_confidence.py  test_margin_sampling.py  test_pascal_voc.py  test_random_sampling.py  test_strategy.py  test_utils.py  test_vote_sampling.py
tests/fixtures/: test_data.json
utils/: utils.py
